[project]
name = "mcp-servers-playground"
version = "0.1.0"
description = "A playground for MCP servers"
authors = [
    {name = "pandego"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
